Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-ssh",
+  "name": "@antsa1615/easy-ssh",
   "version": "1.0.0",
   "main": "easy-ssh.js",
   "author": "Antsa Fiderana",
