--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@antsa1615/easy-ssh",
+  "name": "antsa-easy-ssh",
   "version": "1.0.0",
   "main": "easy-ssh.js",
   "author": "Antsa Fiderana",
@@ -12,6 +12,5 @@
     "ssh2": "^1.15.0",
     "yargs": "^17.7.2"
   },
-  "keywords": ["ssh","cli","easy","reusable"],
-  "private": "false"
+  "keywords": ["ssh","cli","easy","reusable"]
 }
